WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59627
Hang if a sync message handler invalidates the connection
https://bugs.webkit.org/show_bug.cgi?id=59627
Summary
Hang if a sync message handler invalidates the connection
Anders Carlsson
Reported
2011-04-27 13:01:40 PDT
Hang if a sync message handler invalidates the connection
Attachments
Patch
(1.71 KB, patch)
2011-04-27 14:00 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-04-27 14:00:08 PDT
Created
attachment 91342
[details]
Patch
Anders Carlsson
Comment 2
2011-04-27 14:05:25 PDT
Committed
r85088
: <
http://trac.webkit.org/changeset/85088
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug