2011-04-27  Anders Carlsson  <andersca@apple.com>

Reviewed by Dan Bernstein.

        Hang if a sync message handler invalidates the connection
        https://bugs.webkit.org/show_bug.cgi?id=59627

        If dispatching incoming messages while waiting for the sync reply caused the connection to be invalidated,
        we need to return early or we'll wait forever.

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::waitForSyncReply):


Canonical link: https://commits.webkit.org/74806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85088 268f45cc-cd09-0410-ab3c-d52691b4dbfc